setting overflow: visible for waterfall header removes the bug in chrome! everything works perfectly now!

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -70,3 +70,7 @@
 .feed_card{
     margin-top: 50px;
 }
+
+.mdl-layout__header--waterfall{
+    overflow: visible;
+}
